add tensorflow logs

--- a/Data processing.ipynb
+++ b/Data processing.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -173,7 +181,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.callbacks import ModelCheckpoint\n",
+    "import keras as K\n",
+    "\n",
+    "def train_model(model_id, model, optimizer, epochs, X_train, y_train, validation_split, batch_size):\n",
+    "\n",
+    "    model.summary()\n",
+    "    \n",
+    "    checkpoint = ModelCheckpoint('NNs/model-{epoch:03d}.h5', verbose=1, monitor='val_loss',save_best_only=True, mode='auto')  \n",
+    "    \n",
+    "    model.compile(loss='binary_crossentropy',\n",
+    "                  optimizer=optimizer,\n",
+    "                  metrics=['accuracy'])\n",
+    "\n",
+    "    tb_callback = K.callbacks.TensorBoard(log_dir='./logs/nn_' + str(model_id))\n",
+    "\n",
+    "    hist = model.fit(X_train, y_train, validation_split=validation_split, epochs=epochs, batch_size=batch_size, callbacks=[tb_callback, checkpoint])\n",
+    "    \n",
+    "    return hist\n",
+    "\n",
+    "#hist = train_model(...)\n",
+    "#best_epoch = max(hist.history['val_loss'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -185,34 +223,162 @@
       "=================================================================\n",
       "inputs (InputLayer)          (None, 1000)              0         \n",
       "_________________________________________________________________\n",
-      "embedding_2 (Embedding)      (None, 1000, 50)          100000    \n",
+      "embedding_5 (Embedding)      (None, 1000, 50)          100000    \n",
       "_________________________________________________________________\n",
-      "lstm_2 (LSTM)                (None, 64)                29440     \n",
+      "lstm_5 (LSTM)                (None, 64)                29440     \n",
       "_________________________________________________________________\n",
       "FC1 (Dense)                  (None, 256)               16640     \n",
       "_________________________________________________________________\n",
-      "activation_3 (Activation)    (None, 256)               0         \n",
+      "activation_9 (Activation)    (None, 256)               0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 256)               0         \n",
+      "dropout_5 (Dropout)          (None, 256)               0         \n",
       "_________________________________________________________________\n",
       "out_layer (Dense)            (None, 1)                 257       \n",
       "_________________________________________________________________\n",
-      "activation_4 (Activation)    (None, 1)                 0         \n",
+      "activation_10 (Activation)   (None, 1)                 0         \n",
       "=================================================================\n",
       "Total params: 146,337\n",
       "Trainable params: 146,337\n",
       "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+      "_________________________________________________________________\n",
+      "Train on 16608 samples, validate on 4153 samples\n",
+      "Epoch 1/30\n",
+      "16608/16608 [==============================] - 131s 8ms/step - loss: 0.3452 - acc: 0.8513 - val_loss: 0.1623 - val_acc: 0.9369\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 0.16228, saving model to NNs/model-001.h5\n",
+      "Epoch 2/30\n",
+      "16608/16608 [==============================] - 133s 8ms/step - loss: 0.1852 - acc: 0.9337 - val_loss: 0.1688 - val_acc: 0.9410\n",
+      "\n",
+      "Epoch 00002: val_loss did not improve from 0.16228\n",
+      "Epoch 3/30\n",
+      "16608/16608 [==============================] - 129s 8ms/step - loss: 0.1371 - acc: 0.9529 - val_loss: 0.1691 - val_acc: 0.9432\n",
+      "\n",
+      "Epoch 00003: val_loss did not improve from 0.16228\n",
+      "Epoch 4/30\n",
+      "16608/16608 [==============================] - 133s 8ms/step - loss: 0.1121 - acc: 0.9620 - val_loss: 0.1419 - val_acc: 0.9523\n",
+      "\n",
+      "Epoch 00004: val_loss improved from 0.16228 to 0.14193, saving model to NNs/model-004.h5\n",
+      "Epoch 5/30\n",
+      "16608/16608 [==============================] - 130s 8ms/step - loss: 0.1169 - acc: 0.9611 - val_loss: 0.1754 - val_acc: 0.9410\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve from 0.14193\n",
+      "Epoch 6/30\n",
+      "16608/16608 [==============================] - 129s 8ms/step - loss: 0.0922 - acc: 0.9698 - val_loss: 0.1590 - val_acc: 0.9499\n",
+      "\n",
+      "Epoch 00006: val_loss did not improve from 0.14193\n",
+      "Epoch 7/30\n",
+      "16608/16608 [==============================] - 134s 8ms/step - loss: 0.0776 - acc: 0.9745 - val_loss: 0.1874 - val_acc: 0.9311\n",
+      "\n",
+      "Epoch 00007: val_loss did not improve from 0.14193\n",
+      "Epoch 8/30\n",
+      "16608/16608 [==============================] - 129s 8ms/step - loss: 0.0902 - acc: 0.9696 - val_loss: 0.1736 - val_acc: 0.9444\n",
+      "\n",
+      "Epoch 00008: val_loss did not improve from 0.14193\n",
+      "Epoch 9/30\n",
+      "16608/16608 [==============================] - 134s 8ms/step - loss: 0.1341 - acc: 0.9497 - val_loss: 0.2725 - val_acc: 0.8984\n",
+      "\n",
+      "Epoch 00009: val_loss did not improve from 0.14193\n",
+      "Epoch 10/30\n",
+      "16608/16608 [==============================] - 127s 8ms/step - loss: 0.2323 - acc: 0.9064 - val_loss: 0.2677 - val_acc: 0.8933\n",
+      "\n",
+      "Epoch 00010: val_loss did not improve from 0.14193\n",
+      "Epoch 11/30\n",
+      "16608/16608 [==============================] - 130s 8ms/step - loss: 0.1513 - acc: 0.9494 - val_loss: 0.1868 - val_acc: 0.9326\n",
+      "\n",
+      "Epoch 00011: val_loss did not improve from 0.14193\n",
+      "Epoch 12/30\n",
+      "16608/16608 [==============================] - 129s 8ms/step - loss: 0.0865 - acc: 0.9698 - val_loss: 0.1938 - val_acc: 0.9403\n",
+      "\n",
+      "Epoch 00012: val_loss did not improve from 0.14193\n",
+      "Epoch 13/30\n",
+      "16608/16608 [==============================] - 128s 8ms/step - loss: 0.3798 - acc: 0.8221 - val_loss: 0.2626 - val_acc: 0.8907\n",
+      "\n",
+      "Epoch 00013: val_loss did not improve from 0.14193\n",
+      "Epoch 14/30\n",
+      "16608/16608 [==============================] - 134s 8ms/step - loss: 0.2755 - acc: 0.8786 - val_loss: 0.2344 - val_acc: 0.9138\n",
+      "\n",
+      "Epoch 00014: val_loss did not improve from 0.14193\n",
+      "Epoch 15/30\n",
+      "16608/16608 [==============================] - 128s 8ms/step - loss: 0.1254 - acc: 0.9522 - val_loss: 0.1807 - val_acc: 0.9326\n",
+      "\n",
+      "Epoch 00015: val_loss did not improve from 0.14193\n",
+      "Epoch 16/30\n",
+      "16608/16608 [==============================] - 132s 8ms/step - loss: 0.0777 - acc: 0.9732 - val_loss: 0.1490 - val_acc: 0.9490\n",
+      "\n",
+      "Epoch 00016: val_loss did not improve from 0.14193\n",
+      "Epoch 17/30\n",
+      "16608/16608 [==============================] - 129s 8ms/step - loss: 0.0724 - acc: 0.9736 - val_loss: 0.1561 - val_acc: 0.9475\n",
+      "\n",
+      "Epoch 00017: val_loss did not improve from 0.14193\n",
+      "Epoch 18/30\n",
+      "16608/16608 [==============================] - 127s 8ms/step - loss: 0.0553 - acc: 0.9802 - val_loss: 0.1987 - val_acc: 0.9328\n",
+      "\n",
+      "Epoch 00018: val_loss did not improve from 0.14193\n",
+      "Epoch 19/30\n",
+      "16608/16608 [==============================] - 132s 8ms/step - loss: 0.0485 - acc: 0.9837 - val_loss: 0.1515 - val_acc: 0.9567\n",
+      "\n",
+      "Epoch 00019: val_loss did not improve from 0.14193\n",
+      "Epoch 20/30\n",
+      "16608/16608 [==============================] - 128s 8ms/step - loss: 0.0263 - acc: 0.9926 - val_loss: 0.1794 - val_acc: 0.9490\n",
+      "\n",
+      "Epoch 00020: val_loss did not improve from 0.14193\n",
+      "Epoch 21/30\n",
+      "16608/16608 [==============================] - 133s 8ms/step - loss: 0.0195 - acc: 0.9947 - val_loss: 0.1781 - val_acc: 0.9516\n",
+      "\n",
+      "Epoch 00021: val_loss did not improve from 0.14193\n",
+      "Epoch 22/30\n",
+      "16608/16608 [==============================] - 128s 8ms/step - loss: 0.0148 - acc: 0.9961 - val_loss: 0.1758 - val_acc: 0.9576\n",
+      "\n",
+      "Epoch 00022: val_loss did not improve from 0.14193\n",
+      "Epoch 23/30\n",
+      "16608/16608 [==============================] - 131s 8ms/step - loss: 0.0093 - acc: 0.9980 - val_loss: 0.2030 - val_acc: 0.9562\n",
+      "\n",
+      "Epoch 00023: val_loss did not improve from 0.14193\n",
+      "Epoch 24/30\n",
+      "16608/16608 [==============================] - 129s 8ms/step - loss: 0.0089 - acc: 0.9978 - val_loss: 0.2167 - val_acc: 0.9583\n",
+      "\n",
+      "Epoch 00024: val_loss did not improve from 0.14193\n",
+      "Epoch 25/30\n",
+      "16608/16608 [==============================] - 127s 8ms/step - loss: 0.0095 - acc: 0.9977 - val_loss: 0.2241 - val_acc: 0.9521\n",
+      "\n",
+      "Epoch 00025: val_loss did not improve from 0.14193\n",
+      "Epoch 26/30\n",
+      "16608/16608 [==============================] - 132s 8ms/step - loss: 0.0151 - acc: 0.9955 - val_loss: 0.2197 - val_acc: 0.9494\n",
+      "\n",
+      "Epoch 00026: val_loss did not improve from 0.14193\n",
+      "Epoch 27/30\n",
+      "16608/16608 [==============================] - 128s 8ms/step - loss: 0.0098 - acc: 0.9974 - val_loss: 0.2317 - val_acc: 0.9485\n",
+      "\n",
+      "Epoch 00027: val_loss did not improve from 0.14193\n",
+      "Epoch 28/30\n",
+      "16608/16608 [==============================] - 133s 8ms/step - loss: 0.0119 - acc: 0.9957 - val_loss: 0.2321 - val_acc: 0.9530\n",
+      "\n",
+      "Epoch 00028: val_loss did not improve from 0.14193\n",
+      "Epoch 29/30\n",
+      "16608/16608 [==============================] - 127s 8ms/step - loss: 0.0050 - acc: 0.9989 - val_loss: 0.2656 - val_acc: 0.9504\n",
+      "\n",
+      "Epoch 00029: val_loss did not improve from 0.14193\n",
+      "Epoch 30/30\n",
+      "16608/16608 [==============================] - 128s 8ms/step - loss: 0.0138 - acc: 0.9955 - val_loss: 0.2589 - val_acc: 0.9497\n",
+      "\n",
+      "Epoch 00030: val_loss did not improve from 0.14193\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fbf1bd57cc0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "model = LSTM_network()\n",
-    "model.summary()\n",
-    "model.compile(loss='binary_crossentropy',optimizer=Adam(),metrics=['accuracy'])\n",
-    "\n"
+    "\n",
+    "train_model(1, model, Adam(), 30, sequences_matrix, y, 0.2, 128)"
    ]
   },
   {
@@ -406,9 +572,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (my-env)",
+   "display_name": "Python (myenv)",
    "language": "python",
-   "name": "my-env"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
