test network on outside data source

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -382,6 +382,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20761/20761 [==============================] - 9s 424us/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.058978520540837166, 0.9818409517587572]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_test.evaluate(sequences_matrix, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
