--- a/Find_best_network_architecture.ipynb
+++ b/Find_best_network_architecture.ipynb
@@ -2,23 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from keras.models import Model\n",
-    "from keras.layers import SimpleRNN, CuDNNLSTM, GRU, Activation, Dense, Dropout, Input, Embedding\n",
+    "from keras.layers import SimpleRNN, CuDNNLSTM, CuDNNGRU, Activation, Dense, Dropout, Input, Embedding\n",
     "from keras.optimizers import Adam, SGD, RMSprop\n",
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.preprocessing import sequence\n",
@@ -38,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +39,7 @@
        "(20800, 5)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +61,7 @@
        "(20761, 5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3290,6 +3282,214 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LSTMtest_network():\n",
+    "    inputs = Input(name='inputs',shape=[max_len])\n",
+    "    layer = Embedding(max_words,50,input_length=max_len)(inputs)\n",
+    "    layer = CuDNNLSTM(64)(layer)\n",
+    "    layer = Dense(1,name='out_layer')(layer)\n",
+    "    layer = Activation('sigmoid')(layer)\n",
+    "    model = Model(inputs=inputs,outputs=layer)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /usr/local/lib/python3.5/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "inputs (InputLayer)          (None, 1000)              0         \n",
+      "_________________________________________________________________\n",
+      "embedding_1 (Embedding)      (None, 1000, 50)          150000    \n",
+      "_________________________________________________________________\n",
+      "cu_dnnlstm_1 (CuDNNLSTM)     (None, 64)                29696     \n",
+      "_________________________________________________________________\n",
+      "out_layer (Dense)            (None, 1)                 65        \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 1)                 0         \n",
+      "=================================================================\n",
+      "Total params: 179,761\n",
+      "Trainable params: 179,761\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.5/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
+      "Train on 16608 samples, validate on 4153 samples\n",
+      "Epoch 1/10\n",
+      "16608/16608 [==============================] - 16s 982us/step - loss: 0.3942 - acc: 0.8274 - val_loss: 0.2884 - val_acc: 0.8902\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 0.28843, saving model to NNs/LSTMtest-001.h5\n",
+      "Epoch 2/10\n",
+      "16608/16608 [==============================] - 8s 467us/step - loss: 0.2067 - acc: 0.9285 - val_loss: 0.1621 - val_acc: 0.9458\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.28843 to 0.16207, saving model to NNs/LSTMtest-002.h5\n",
+      "Epoch 3/10\n",
+      "16608/16608 [==============================] - 8s 477us/step - loss: 0.1752 - acc: 0.9420 - val_loss: 0.1664 - val_acc: 0.9391\n",
+      "\n",
+      "Epoch 00003: val_loss did not improve from 0.16207\n",
+      "Epoch 4/10\n",
+      "16608/16608 [==============================] - 8s 479us/step - loss: 0.1511 - acc: 0.9503 - val_loss: 0.1542 - val_acc: 0.9490\n",
+      "\n",
+      "Epoch 00004: val_loss improved from 0.16207 to 0.15421, saving model to NNs/LSTMtest-004.h5\n",
+      "Epoch 5/10\n",
+      "16608/16608 [==============================] - 8s 479us/step - loss: 0.1344 - acc: 0.9560 - val_loss: 0.1582 - val_acc: 0.9453\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve from 0.15421\n",
+      "Epoch 6/10\n",
+      "16608/16608 [==============================] - 8s 472us/step - loss: 0.1255 - acc: 0.9573 - val_loss: 0.2247 - val_acc: 0.9080\n",
+      "\n",
+      "Epoch 00006: val_loss did not improve from 0.15421\n",
+      "Epoch 7/10\n",
+      "16608/16608 [==============================] - 7s 448us/step - loss: 0.1047 - acc: 0.9665 - val_loss: 0.1494 - val_acc: 0.9470\n",
+      "\n",
+      "Epoch 00007: val_loss improved from 0.15421 to 0.14938, saving model to NNs/LSTMtest-007.h5\n",
+      "Epoch 8/10\n",
+      "16608/16608 [==============================] - 7s 441us/step - loss: 0.0983 - acc: 0.9686 - val_loss: 0.1554 - val_acc: 0.9422\n",
+      "\n",
+      "Epoch 00008: val_loss did not improve from 0.14938\n",
+      "Epoch 9/10\n",
+      "16608/16608 [==============================] - 8s 475us/step - loss: 0.0928 - acc: 0.9710 - val_loss: 0.2109 - val_acc: 0.9254\n",
+      "\n",
+      "Epoch 00009: val_loss did not improve from 0.14938\n",
+      "Epoch 10/10\n",
+      "16608/16608 [==============================] - 8s 472us/step - loss: 0.0893 - acc: 0.9700 - val_loss: 0.1589 - val_acc: 0.9473\n",
+      "\n",
+      "Epoch 00010: val_loss did not improve from 0.14938\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fcdbef656a0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = LSTMtest_network()\n",
+    "train_model('LSTMtest', model, RMSprop(), 10, sequences_matrix, y, 0.2, 128)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def LSTMtest2_network():\n",
+    "    inputs = Input(name='inputs',shape=[max_len])\n",
+    "    layer = Embedding(max_words,64,input_length=max_len)(inputs)\n",
+    "    layer = CuDNNLSTM(48)(layer)\n",
+    "    layer = Dense(1,name='out_layer')(layer)\n",
+    "    layer = Activation('sigmoid')(layer)\n",
+    "    model = Model(inputs=inputs,outputs=layer)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "inputs (InputLayer)          (None, 1000)              0         \n",
+      "_________________________________________________________________\n",
+      "embedding_7 (Embedding)      (None, 1000, 64)          192000    \n",
+      "_________________________________________________________________\n",
+      "cu_dnnlstm_3 (CuDNNLSTM)     (None, 48)                21888     \n",
+      "_________________________________________________________________\n",
+      "out_layer (Dense)            (None, 1)                 49        \n",
+      "_________________________________________________________________\n",
+      "activation_5 (Activation)    (None, 1)                 0         \n",
+      "=================================================================\n",
+      "Total params: 213,937\n",
+      "Trainable params: 213,937\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Train on 16608 samples, validate on 4153 samples\n",
+      "Epoch 1/10\n",
+      "16608/16608 [==============================] - 8s 470us/step - loss: 0.3877 - acc: 0.8465 - val_loss: 0.2144 - val_acc: 0.9258\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 0.21444, saving model to NNs/LSTMtest2-001.h5\n",
+      "Epoch 2/10\n",
+      "16608/16608 [==============================] - 7s 444us/step - loss: 0.1871 - acc: 0.9338 - val_loss: 0.1655 - val_acc: 0.9425\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.21444 to 0.16554, saving model to NNs/LSTMtest2-002.h5\n",
+      "Epoch 3/10\n",
+      "16608/16608 [==============================] - 7s 407us/step - loss: 0.1674 - acc: 0.9417 - val_loss: 0.1547 - val_acc: 0.9432\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 0.16554 to 0.15465, saving model to NNs/LSTMtest2-003.h5\n",
+      "Epoch 4/10\n",
+      "16608/16608 [==============================] - 7s 436us/step - loss: 0.1332 - acc: 0.9548 - val_loss: 0.1395 - val_acc: 0.9499\n",
+      "\n",
+      "Epoch 00004: val_loss improved from 0.15465 to 0.13949, saving model to NNs/LSTMtest2-004.h5\n",
+      "Epoch 5/10\n",
+      "16608/16608 [==============================] - 7s 448us/step - loss: 0.1176 - acc: 0.9617 - val_loss: 0.1481 - val_acc: 0.9492\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve from 0.13949\n",
+      "Epoch 6/10\n",
+      "16608/16608 [==============================] - 7s 444us/step - loss: 0.1018 - acc: 0.9658 - val_loss: 0.1485 - val_acc: 0.9470\n",
+      "\n",
+      "Epoch 00006: val_loss did not improve from 0.13949\n",
+      "Epoch 7/10\n",
+      "16608/16608 [==============================] - 7s 447us/step - loss: 0.0978 - acc: 0.9693 - val_loss: 0.1465 - val_acc: 0.9516\n",
+      "\n",
+      "Epoch 00007: val_loss did not improve from 0.13949\n",
+      "Epoch 8/10\n",
+      "16608/16608 [==============================] - 7s 451us/step - loss: 0.0817 - acc: 0.9742 - val_loss: 0.1551 - val_acc: 0.9446\n",
+      "\n",
+      "Epoch 00008: val_loss did not improve from 0.13949\n",
+      "Epoch 9/10\n",
+      "16608/16608 [==============================] - 8s 457us/step - loss: 0.0782 - acc: 0.9756 - val_loss: 0.1605 - val_acc: 0.9480\n",
+      "\n",
+      "Epoch 00009: val_loss did not improve from 0.13949\n",
+      "Epoch 10/10\n",
+      "16608/16608 [==============================] - 8s 457us/step - loss: 0.0735 - acc: 0.9772 - val_loss: 0.1430 - val_acc: 0.9545\n",
+      "\n",
+      "Epoch 00010: val_loss did not improve from 0.13949\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fcda4774550>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = LSTMtest2_network()\n",
+    "train_model('LSTMtest2', model, RMSprop(), 10, sequences_matrix, y, 0.2, 128)"
+   ]
   },
   {
    "cell_type": "code",
