--- a/Find_best_network_architecture.ipynb
+++ b/Find_best_network_architecture.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3489,6 +3497,208 @@
    "source": [
     "model = LSTMtest2_network()\n",
     "train_model('LSTMtest2', model, RMSprop(), 10, sequences_matrix, y, 0.2, 128)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GRUtest2_network():\n",
+    "    inputs = Input(name='inputs',shape=[max_len])\n",
+    "    layer = Embedding(max_words,64,input_length=max_len)(inputs)\n",
+    "    layer = CuDNNGRU(48)(layer)\n",
+    "    layer = Dense(1,name='out_layer')(layer)\n",
+    "    layer = Activation('sigmoid')(layer)\n",
+    "    model = Model(inputs=inputs,outputs=layer)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "inputs (InputLayer)          (None, 1000)              0         \n",
+      "_________________________________________________________________\n",
+      "embedding_2 (Embedding)      (None, 1000, 64)          192000    \n",
+      "_________________________________________________________________\n",
+      "cu_dnngru_1 (CuDNNGRU)       (None, 48)                16416     \n",
+      "_________________________________________________________________\n",
+      "out_layer (Dense)            (None, 1)                 49        \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 1)                 0         \n",
+      "=================================================================\n",
+      "Total params: 208,465\n",
+      "Trainable params: 208,465\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Train on 16608 samples, validate on 4153 samples\n",
+      "Epoch 1/10\n",
+      "16608/16608 [==============================] - 14s 832us/step - loss: 0.3976 - acc: 0.8466 - val_loss: 0.3074 - val_acc: 0.8635\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 0.30737, saving model to NNs/GRUtest2_network-001.h5\n",
+      "Epoch 2/10\n",
+      "16608/16608 [==============================] - 7s 435us/step - loss: 0.2181 - acc: 0.9224 - val_loss: 0.2488 - val_acc: 0.9013\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.30737 to 0.24884, saving model to NNs/GRUtest2_network-002.h5\n",
+      "Epoch 3/10\n",
+      "16608/16608 [==============================] - 7s 432us/step - loss: 0.1738 - acc: 0.9415 - val_loss: 0.1940 - val_acc: 0.9338\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 0.24884 to 0.19404, saving model to NNs/GRUtest2_network-003.h5\n",
+      "Epoch 4/10\n",
+      "16608/16608 [==============================] - 7s 432us/step - loss: 0.1442 - acc: 0.9509 - val_loss: 0.1670 - val_acc: 0.9437\n",
+      "\n",
+      "Epoch 00004: val_loss improved from 0.19404 to 0.16703, saving model to NNs/GRUtest2_network-004.h5\n",
+      "Epoch 5/10\n",
+      "16608/16608 [==============================] - 7s 419us/step - loss: 0.1313 - acc: 0.9555 - val_loss: 0.1901 - val_acc: 0.9403\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve from 0.16703\n",
+      "Epoch 6/10\n",
+      "16608/16608 [==============================] - 7s 411us/step - loss: 0.1339 - acc: 0.9569 - val_loss: 0.1469 - val_acc: 0.9492\n",
+      "\n",
+      "Epoch 00006: val_loss improved from 0.16703 to 0.14693, saving model to NNs/GRUtest2_network-006.h5\n",
+      "Epoch 7/10\n",
+      "16608/16608 [==============================] - 7s 435us/step - loss: 0.1064 - acc: 0.9656 - val_loss: 0.1475 - val_acc: 0.9518\n",
+      "\n",
+      "Epoch 00007: val_loss did not improve from 0.14693\n",
+      "Epoch 8/10\n",
+      "16608/16608 [==============================] - 7s 436us/step - loss: 0.0948 - acc: 0.9697 - val_loss: 0.1950 - val_acc: 0.9400\n",
+      "\n",
+      "Epoch 00008: val_loss did not improve from 0.14693\n",
+      "Epoch 9/10\n",
+      "16608/16608 [==============================] - 7s 426us/step - loss: 0.0881 - acc: 0.9722 - val_loss: 0.1455 - val_acc: 0.9555\n",
+      "\n",
+      "Epoch 00009: val_loss improved from 0.14693 to 0.14554, saving model to NNs/GRUtest2_network-009.h5\n",
+      "Epoch 10/10\n",
+      "16608/16608 [==============================] - 7s 427us/step - loss: 0.0758 - acc: 0.9771 - val_loss: 0.2029 - val_acc: 0.9256\n",
+      "\n",
+      "Epoch 00010: val_loss did not improve from 0.14554\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f71a8096b70>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = GRUtest2_network()\n",
+    "train_model('GRUtest2_network', model, RMSprop(), 10, sequences_matrix, y, 0.2, 128)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def RNNtest2_network():\n",
+    "    inputs = Input(name='inputs',shape=[max_len])\n",
+    "    layer = Embedding(max_words,64,input_length=max_len)(inputs)\n",
+    "    layer = SimpleRNN(48)(layer)\n",
+    "    layer = Dense(1,name='out_layer')(layer)\n",
+    "    layer = Activation('sigmoid')(layer)\n",
+    "    model = Model(inputs=inputs,outputs=layer)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "inputs (InputLayer)          (None, 1000)              0         \n",
+      "_________________________________________________________________\n",
+      "embedding_3 (Embedding)      (None, 1000, 64)          192000    \n",
+      "_________________________________________________________________\n",
+      "simple_rnn_2 (SimpleRNN)     (None, 48)                5424      \n",
+      "_________________________________________________________________\n",
+      "out_layer (Dense)            (None, 1)                 49        \n",
+      "_________________________________________________________________\n",
+      "activation_3 (Activation)    (None, 1)                 0         \n",
+      "=================================================================\n",
+      "Total params: 197,473\n",
+      "Trainable params: 197,473\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Train on 16608 samples, validate on 4153 samples\n",
+      "Epoch 1/10\n",
+      "16608/16608 [==============================] - 74s 4ms/step - loss: 0.4508 - acc: 0.7968 - val_loss: 0.2617 - val_acc: 0.9155\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 0.26165, saving model to NNs/RNNtest2_network-001.h5\n",
+      "Epoch 2/10\n",
+      "16608/16608 [==============================] - 74s 4ms/step - loss: 0.2598 - acc: 0.8970 - val_loss: 0.2415 - val_acc: 0.9114\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.26165 to 0.24149, saving model to NNs/RNNtest2_network-002.h5\n",
+      "Epoch 3/10\n",
+      "16608/16608 [==============================] - 74s 4ms/step - loss: 0.1577 - acc: 0.9426 - val_loss: 0.2173 - val_acc: 0.9167\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 0.24149 to 0.21730, saving model to NNs/RNNtest2_network-003.h5\n",
+      "Epoch 4/10\n",
+      "16608/16608 [==============================] - 77s 5ms/step - loss: 0.1147 - acc: 0.9583 - val_loss: 0.3941 - val_acc: 0.8452\n",
+      "\n",
+      "Epoch 00004: val_loss did not improve from 0.21730\n",
+      "Epoch 5/10\n",
+      "16608/16608 [==============================] - 74s 4ms/step - loss: 0.0689 - acc: 0.9780 - val_loss: 0.2496 - val_acc: 0.9136\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve from 0.21730\n",
+      "Epoch 6/10\n",
+      "16608/16608 [==============================] - 73s 4ms/step - loss: 0.0451 - acc: 0.9857 - val_loss: 0.2999 - val_acc: 0.8941\n",
+      "\n",
+      "Epoch 00006: val_loss did not improve from 0.21730\n",
+      "Epoch 7/10\n",
+      "16608/16608 [==============================] - 75s 5ms/step - loss: 0.0350 - acc: 0.9893 - val_loss: 0.2679 - val_acc: 0.9198\n",
+      "\n",
+      "Epoch 00007: val_loss did not improve from 0.21730\n",
+      "Epoch 8/10\n",
+      "16608/16608 [==============================] - 76s 5ms/step - loss: 0.0191 - acc: 0.9948 - val_loss: 0.3499 - val_acc: 0.9059\n",
+      "\n",
+      "Epoch 00008: val_loss did not improve from 0.21730\n",
+      "Epoch 9/10\n",
+      "16608/16608 [==============================] - 74s 4ms/step - loss: 0.0136 - acc: 0.9959 - val_loss: 0.4050 - val_acc: 0.8844\n",
+      "\n",
+      "Epoch 00009: val_loss did not improve from 0.21730\n",
+      "Epoch 10/10\n",
+      "16608/16608 [==============================] - 74s 4ms/step - loss: 0.0172 - acc: 0.9946 - val_loss: 0.3757 - val_acc: 0.8916\n",
+      "\n",
+      "Epoch 00010: val_loss did not improve from 0.21730\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f71a02d2048>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = RNNtest2_network()\n",
+    "train_model('RNNtest2_network', model, RMSprop(), 10, sequences_matrix, y, 0.2, 128)"
    ]
   },
   {
